// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection should render connected component 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] } }"
      filterterm=""
      searchterm=""
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] }"
        newentryurl=""
      />
      <mock-collection-controls
        filter="Map {}"
        group="Map {}"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] }"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url and path 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] } }"
      filterterm="dir1/dir2"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new?path=dir1/dir2"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": true }"
        filterterm="dir1/dir2"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection without create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": false }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": false }"
        newentryurl=""
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortable_fields\\": List [], \\"view_filters\\": List [], \\"view_groups\\": List [], \\"create\\": false }"
      />
    </main>
  </div>
</DocumentFragment>
`;
